# AI-Models-Benchmark-Dataset-2026

./: README.md  ai_models_benchmark_analysis.ipynb  pyproject.toml  requirements.txt
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/interim/: 01_loaded.parquet  02_cleaned.parquet  03_distributions_analyzed.parquet
data/processed/: ai_models_deduped.parquet  ai_models_enriched.parquet  correlation_analysis_correlation.parquet  correlation_analysis_p_adjusted.parquet  pareto_frontier.parquet  (+2 more)
reports/: correlation_analysis_2026-01-18.md  data_structure.md  distributions.md  duplicate_resolution_2026-01-18.md  enrichment_coverage.md  missing_values.md  pareto_analysis_2026-01-18.md  pipeline_summary.md  provider_clustering_2026-01-18.md  quality_2026-01-18.md  statistical_tests_2026-01-18.md  trend_predictions_2026-01-18.md
scripts/: 01_load.py  02_clean.py  03_analyze_distributions.py  04_detect_outliers.py  05_quality_report.py  06_enrich_external.py  07_duplicate_resolution.py  08_correlation_analysis.py  09_pareto_frontier.py  10_statistical_tests.py  11_provider_clustering.py  12_trend_predictions.py  13_distribution_viz.py  14_provider_frontier_viz.py  15_linked_brushing_viz.py
src/: __init__.py  analyze.py  bootstrap.py  clean.py  clustering.py  deduplicate.py  enrich.py  load.py  pareto.py  quality.py  statistics.py  utils.py  validate.py  visualize.py
(+68 files in other folders)
