[tool.poetry]
name = "ai-models-benchmark-analysis"
version = "0.1.0"
description = "Comprehensive exploratory data analysis of the 2026 AI Models Benchmark Dataset"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
polars = ">=1.0.0"
pandera = {version = ">=0.21.0", extras = ["polars"]}
scipy = ">=1.15.0"
scikit-learn = ">=1.6.0"
matplotlib = ">=3.10.0"
seaborn = ">=0.13.0"
requests = ">=2.32.0"
beautifulsoup4 = ">=4.12.0"
plotly = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
